# tir104

./: README.md
airflow-demo/dags/: d_11_example_import_taskgroup.py
airflow-demo/utils/: parse_external_arg.py
docker/: README.md  docker-compose.yaml
gcp/: .gitignore  01_connect_to_bq.py  app.py  flask.Dockerfile  product.jsonl  pyproject.toml  request_api.py  secret_manager_demo.py
gcp/mount_gcs_in_container/: Dockerfile  run.sh
gcp/partitioned_sale/dt=2024-05-06/: sale.csv
gcp/partitioned_sale/dt=2024-05-08/: sale.csv
pandas/: .gitignore  Pipfile
pandas/.devcontainer/: devcontainer.json
pandas/src/: 01_jupyter_test.ipynb  02_pandas_practice.ipynb  03_ptt_article_transformation.ipynb  04_read_load.ipynb  05_apply.ipynb  06_deal_with_nan.ipynb  07_preview_and_summary.ipynb  08_typing.ipynb  09_pendulum.ipynb  10_join.ipynb  11_melt.ipynb  12_cumcount.ipynb  13_pandasql.ipynb  14_pymysql.ipynb  15_read_sql.ipynb  test.py  test1.py
prefect-demo/src/flows/: f_01_quick_start_flow.py  f_02_async_task_flow.py  f_04_forloop_submit_flow.py
prefect-demo/src/flows/test/: hello_world_flow.py
